# ccpm

./: .gitignore  README.md  pyproject.toml
examples/: claude-md-sample.md
examples/agents/: reviewer.md
examples/commands/: todo.md
examples/env-files/: .env.example
examples/hooks/: session-start.sh
examples/json/: base-settings.json  extra-settings.json
examples/profiles/: base-readonly.toml  claude-md-file-ref.toml  claude-md-replace.toml  cycle-a.toml  cycle-b.toml  diamond-a.toml  diamond-b.toml  diamond-c.toml  diamond-top.toml  docker-deploy.toml  edit-permissions.toml  env-vars.toml  full-featured.toml  git-permissions.toml  json-ref-with-overrides.toml  json-ref.toml  minimal.toml  python-dev.toml  replace-example.toml  shell-file-ref.toml  with-credentials.toml  with-env-file.toml  with-session.toml  with-shell.toml
examples/sessions/: example-session.jsonl
examples/shell/: container-setup.sh
examples/skills/my-skill/: SKILL.md
scripts/: generate-credentials
src/ccpm/: __main__.py  cli.py
src/ccpm/core/: compiler.py  deep_merge.py  env.py  resolver.py
src/ccpm/deploy/: docker.py  local.py  ssh.py
src/ccpm/emit/: __init__.py  claude_md.py  env_file.py  files.py  mcp.py  session.py  settings.py  shell.py
src/ccpm/schema/: profile.py
src/ccpm/util/: backup.py  discovery.py  init.py
tests/: conftest.py  test_backup.py  test_cli.py  test_compiler.py  test_credentials.py  test_deep_merge.py  test_discovery.py  test_emit.py  test_env.py  test_env_file.py  test_resolver.py  test_roundtrip.py  test_session.py  test_shell.py
