[project]
name = "ccpm"
version = "0.1.0"
description = "Claude Code Profile Manager - composable, layered configuration profiles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
    "rich>=13.0",
]

[project.scripts]
ccpm = "ccpm.cli:main"
claude-profile = "ccpm.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
